--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@cmyee/pushy": "^1.1.2",
     "bootstrap": "^4.1.3",
+    "components-font-awesome": "^5.4.2",
     "google-maps": "^3.3.0",
     "jquery": "^3.3.1",
+    "mdi": "^2.2.43",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.14.7",
     "smooth-scroll": "^16.0.3"
